--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1182,8 +1182,8 @@ section {
 --------------------------------------------------------------*/
 #footer {
   padding: 15px;
-  color: #f4f6fd;
-  font-size: 14px;
+  color: #525252;
+  font-size: 10px;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -1199,8 +1199,15 @@ section {
 #footer .credits {
   padding-top: 5px;
   text-align: center;
-  font-size: 13px;
-  color: #eaebf0;
+  font-size: 10px;
+  color: #525252;
+}
+
+#footer a {
+  padding-top: 5px;
+  text-align: center;
+  font-size: 10px;
+  color: #525252;
 }
 
 @media (max-width: 1199px) {
